- Project Structure changes - Socket Events Added

--- a/views/socketchat.html
+++ b/views/socketchat.html
@@ -46,7 +46,7 @@
                 <label></label>
                 <textarea data-bind="textInput: $root.messageContent" placeholder="Content"></textarea>
             </fieldset>
-            <button data-bind="click: $root.sendMessage">Senden</button>
+            <button data-bind="click: $root.sendLobbyMessage">Senden</button>
         </form>
     </div>
 </main>
